--- a/TopGunLab_Practice3/Views/Home/Details.cshtml
+++ b/TopGunLab_Practice3/Views/Home/Details.cshtml
@@ -5,20 +5,16 @@
 @model TopGunLab_Practice3.Models.Product
 
 @section Body{
-    <h2>Details</h2>
+    <div class="h1" style="font-family:'Segoe UI'; padding:5px">Details</div>
     <table class="table table-hover">
         <tbody>
             <tr>
-                <th scope="row" class="bg-info">Name</th>
+                <th scope="row" class="bg-info" style="width:100px">Name</th>
                 <td> @Model.Name</td>
             </tr>
             <tr>
                 <th scope="row" class="bg-info">Quantity</th>
                 <td> @Model.Quantity</td>
-            </tr>
-            <tr>
-                <th scope="row" class="bg-info">Description</th>
-                <td> @Model.Description</td>
             </tr>
         </tbody>
     </table>
