--- a/TopGunLab_Practice3/Views/Home/Index.cshtml
+++ b/TopGunLab_Practice3/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 }
 @model List<TopGunLab_Practice3.Models.Product>
 @section Body{
-    <table class="table table-hover">
-        <caption class="h1" style="font-family:'Segoe UI'">Product list</caption>
+    <div class="h1" style="font-family:'Segoe UI'; padding:5px">Product list</div>
+    <table class="table table-hover" style="width:600px">
         <thead class="bg-info">
             <tr>
-                <th scope="col">#</th>
+                <th scope="col" class="bg-primary" >#</th>
                 <th scope="col">Name</th>
                 <th scope="col">Action</th>
             </tr>
@@ -16,15 +16,14 @@
             @for (int i = 0; i < Model.Count(); i++)
             {
                 <tr>
-                    <th scope="row">@(i + 1)</th>
+                    <th scope="row" class="bg-info" style="width:20px">@(i + 1)</th>
                     <th>@Model[i].Name</th>
                     <th>
-                        <div class="btn-group" role="group">
-                            @Html.ActionLink("Details", "Details", "Home", new { id = i }, new { @class = "btn btn-info" })
-                        </div>
+                        @Html.ActionLink("Details", "Details", "Home", new { id = i }, new { @class = "btn btn-info" })
                     </th>
                 </tr>
             }
         </tbody>
     </table>
+    @Html.ActionLink("+ New Product", "Add", "Home", null, new { @class = "btn btn-success" })
 }
