--- a/TopGunLab_Practice3/Views/Home/Details.cshtml
+++ b/TopGunLab_Practice3/Views/Home/Details.cshtml
@@ -14,7 +14,7 @@
             </tr>
             <tr>
                 <th scope="row" class="bg-info">Quantity</th>
-                <td> @Model.Quantity</td>
+                <td> @Model.Quantity @Model.Type</td>
             </tr>
         </tbody>
     </table>
