--- a/TopGunLab_Practice3/Views/Home/Add.cshtml
+++ b/TopGunLab_Practice3/Views/Home/Add.cshtml
@@ -11,18 +11,18 @@
         <table class="table table-hover">
             <tr>
                 <th scope="row" class="bg-success" style="width:100px"><p>Name</p></th>
-                <td><input type="text" name="Name" /> </td>
+                <td><input type="text" name="Name" required /> </td>
             </tr>
             <tr>
                 <th scope="row" class="bg-success"><p>Quantity</p></th>
-                <td><input type="text" name="Quantity" /> </td>
+                <td><input type="text" name="Quantity" required/> </td>
             </tr>
             <tr>
                 <th scope="row" class="bg-success"><p>Type</p></th>
                 <td>
                     @Html.EnumDropDownListFor(
                 x => x.Type,
-                "Select My Type",
+                null,
                 new { @class = "form-control" })
                             </td>
             </tr>
