--- a/TopGunLab_Practice3/Views/Home/Details.cshtml
+++ b/TopGunLab_Practice3/Views/Home/Details.cshtml
@@ -5,7 +5,7 @@
 @model TopGunLab_Practice3.Models.Product
 
 @section Body{
-    <div class="h1" style="font-family:'Segoe UI'; padding:5px">Details</div>
+    <div class="h1" style="font-family:'Segoe UI'; padding:5px">@ViewBag.Title</div>
     <table class="table table-hover">
         <tbody>
             <tr>
